Add comments to the data models and APIs of Offer Core Service
