# offer_core_service/internal/generated/offer_core_service/v1/api.pb.gw.go
@@ -83,28 +83,28 @@ func local_request_OfferCoreService_CreateOffer_0(ctx context.Context, marshaler
 
 }
 
-func request_OfferCoreService_UpdateOffer_0(ctx context.Context, marshaler runtime.Marshaler, client OfferCoreServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq UpdateOfferRequest
+func request_OfferCoreService_UpdateOfferStatus_0(ctx context.Context, marshaler runtime.Marshaler, client OfferCoreServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateOfferStatusRequest
 	var metadata runtime.ServerMetadata
 
 	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && err != io.EOF {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := client.UpdateOffer(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.UpdateOfferStatus(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
 
-func local_request_OfferCoreService_UpdateOffer_0(ctx context.Context, marshaler runtime.Marshaler, server OfferCoreServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq UpdateOfferRequest
+func local_request_OfferCoreService_UpdateOfferStatus_0(ctx context.Context, marshaler runtime.Marshaler, server OfferCoreServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateOfferStatusRequest
 	var metadata runtime.ServerMetadata
 
 	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && err != io.EOF {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := server.UpdateOffer(ctx, &protoReq)
+	msg, err := server.UpdateOfferStatus(ctx, &protoReq)
 	return msg, metadata, err
 
 }
@@ -217,7 +217,7 @@ func RegisterOfferCoreServiceHandlerServer(ctx context.Context, mux *runtime.Ser
 
 	})
 
-	mux.Handle("POST", pattern_OfferCoreService_UpdateOffer_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_OfferCoreService_UpdateOfferStatus_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
@@ -225,12 +225,12 @@ func RegisterOfferCoreServiceHandlerServer(ctx context.Context, mux *runtime.Ser
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/offer_core_service.v1.OfferCoreService/UpdateOffer", runtime.WithHTTPPathPattern("/offer_core_service.v1.OfferCoreService/UpdateOffer"))
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/offer_core_service.v1.OfferCoreService/UpdateOfferStatus", runtime.WithHTTPPathPattern("/offer_core_service.v1.OfferCoreService/UpdateOfferStatus"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_OfferCoreService_UpdateOffer_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_OfferCoreService_UpdateOfferStatus_0(annotatedContext, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
 		if err != nil {
@@ -238,7 +238,7 @@ func RegisterOfferCoreServiceHandlerServer(ctx context.Context, mux *runtime.Ser
 			return
 		}
 
-		forward_OfferCoreService_UpdateOffer_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_OfferCoreService_UpdateOfferStatus_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -377,25 +377,25 @@ func RegisterOfferCoreServiceHandlerClient(ctx context.Context, mux *runtime.Ser
 
 	})
 
-	mux.Handle("POST", pattern_OfferCoreService_UpdateOffer_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_OfferCoreService_UpdateOfferStatus_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/offer_core_service.v1.OfferCoreService/UpdateOffer", runtime.WithHTTPPathPattern("/offer_core_service.v1.OfferCoreService/UpdateOffer"))
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/offer_core_service.v1.OfferCoreService/UpdateOfferStatus", runtime.WithHTTPPathPattern("/offer_core_service.v1.OfferCoreService/UpdateOfferStatus"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_OfferCoreService_UpdateOffer_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_OfferCoreService_UpdateOfferStatus_0(annotatedContext, inboundMarshaler, client, req, pathParams)
 		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
 		if err != nil {
 			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_OfferCoreService_UpdateOffer_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_OfferCoreService_UpdateOfferStatus_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -451,7 +451,7 @@ var (
 
 	pattern_OfferCoreService_CreateOffer_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"offer_core_service.v1.OfferCoreService", "CreateOffer"}, ""))
 
-	pattern_OfferCoreService_UpdateOffer_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"offer_core_service.v1.OfferCoreService", "UpdateOffer"}, ""))
+	pattern_OfferCoreService_UpdateOfferStatus_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"offer_core_service.v1.OfferCoreService", "UpdateOfferStatus"}, ""))
 
 	pattern_OfferCoreService_GetOffer_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"offer_core_service.v1.OfferCoreService", "GetOffer"}, ""))
 
@@ -463,7 +463,7 @@ var (
 
 	forward_OfferCoreService_CreateOffer_0 = runtime.ForwardResponseMessage
 
-	forward_OfferCoreService_UpdateOffer_0 = runtime.ForwardResponseMessage
+	forward_OfferCoreService_UpdateOfferStatus_0 = runtime.ForwardResponseMessage
 
 	forward_OfferCoreService_GetOffer_0 = runtime.ForwardResponseMessage
 
